agregado de imagenes al slider, agregado de productos con imagenes y descripciones, arreglado de titulo y subtitulo seccion productos destacados

--- a/index.html
+++ b/index.html
@@ -56,18 +56,28 @@
   <!-- SLIDER START -->
   <div class="container-fluid p-0">
       <div id="carouselExampleControls" class="carousel slide wv-100" data-bs-ride="carousel">
-          <div class="carousel-inner">
-              <!-- SLIDER IMAGES -->
-              <div class="carousel-item active">
-                  <img src="images/Slider.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                  <img src="images/Slider.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                  <img src="images/Slider.png" class="d-block w-100" alt="...">
-              </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <!-- SLIDER IMAGES/CAPTIONS -->
+            <img src="images/slider_one.JPG" class="carousel__image d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="carousel-caption__text">DECORÁ TU HOGAR CON NUESTRA LÍNEA DE ALMOHADONES</h5>
+            </div>
           </div>
+          <div class="carousel-item">
+            <img src="images/slider_two.JPG" class="carousel__image d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="carousel-caption__text">LINEA EXTERIOR</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/slider_three.JPG" class="carousel__image d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="carousel-caption__text">SAHUMERIOS</h5>
+            </div>
+          </div>
+        </div>
           <!-- SLIDER CONTROL -->
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -117,58 +127,58 @@
     <div class="featuredProducts pb-4 row">
       <!-- FEATURED PRODUCTS HEADER -->
       <div class="col-12 d-flex justify-content-center pt-4">
-        <h2 class="featuredProducts__title featuredProducts__title--style">Productos Destacados</h2>
+        <h2 class="featuredProducts__title featuredProducts__title--style text-center">Productos Destacados</h2>
       </div>
       <div class="col-12 d-flex justify-content-center pb-4">
-        <p class="featuredProducts__subtitle featuredProducts__subtitle--style">Todo lo que soñás para tu casa</p>
+        <p class="featuredProducts__subtitle featuredProducts__subtitle--style text-center">Todo lo que soñás para tu casa</p>
       </div>
       <!-- PRODUCTS -->
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productOne" href="pages/productOne.html">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/servilletero.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">SERVILLETERO - $500</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productTwo" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/platos_y_utensillos.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">KIT DE MESA - $10000</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productThree" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/mate.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">MATE - $800</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productFour" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/para_puerta.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PARA PUERTA - $600</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productFive" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/almohadon_blanco.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">ALMOHADON BLANCO - $750</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productSix" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/almohadon_crudo.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">ALMOHADON CRUDO - $1200</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productSeven" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/almohadon_rallado.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">ALMOHADON RALLADO - $550</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
         <a class="text-decoration-none featuredProducts__productEight" href="#">
-          <img src="images/product.png" class="img-fluid" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PRODUCTO - $XXXX</p>
+          <img src="images/hamaca.JPG" class="img-fluid rounded" alt="">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">HAMACA - $10000</p>
         </a>
       </div>          
     </div>
@@ -213,7 +223,7 @@
   <!-- CATEGORIES ENDS -->
 
   <!-- FOOTER START -->
-  <footer class="footer container-fluid mt-4">
+  <footer class="footer container-fluid mt-4 d-none d-sm-block">
     <div class="row d-flex">
       <div class="footer__brand col-6 col-sm-2 align-self-center">
         <img src="images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
@@ -241,6 +251,9 @@
     </div>
   </footer>
   <!-- FOOTER ENDS -->
+
+  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
