--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -57,22 +57,22 @@
         </div>
         <div class="row">
             <!-- ADD TO CART -->
-            <div class="col-12 p-2 d-flex justify-content-center howToBuy__addToCart">
+            <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__addToCart">
                 <img src="../images/bagIcon.png" alt="Icono de bolso de compra" class="d-inline-block pe-2">
                 <p class="howToBuy__text d-inline-block m-0">Seleccioná los productos que querés y hacé click en "agregar al carrito".</p>
             </div>
             <!-- VIEW SHOP CART -->
-            <div class="col-12 p-2 d-flex justify-content-center howToBuy__shopCart">
+            <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__shopCart">
                 <img src="../images/eyeIcon.png" alt="Icono de ojo" class="d-inline-block pe-2">
                 <p class="howToBuy__text d-inline-block m-0">Una vez que finalizaste tu compra cliqueá en “Ver Carrito”. Allí podrás visualizar un detalle de tu pedido.</p>
             </div>
             <!-- FINISH BUY -->
-            <div class="col-12 p-2 d-flex justify-content-center howToBuy__addData">
+            <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__addData">
                 <img src="../images/ticketIcon.png" alt="Icono de Ticket" class="d-inline-block pe-2">
                 <p class="howToBuy__text d-inline-block m-0">Luego cliqueá sobre finalizar compra y completá con tus datos.</p>
             </div>
             <!-- DATA SEND -->
-            <div class="col-12 p-2 d-flex justify-content-center howToBuy__email">
+            <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__email">
                 <img src="../images/emailIcon.png" alt="Icono de Email" class="d-inline-block pe-2">
                 <p class="howToBuy__text d-inline-block m-0">Hacé clic en enviar pedido, recibiremos un mail con tus datos y tu orden. Nos estaremos contactando a la brevedad para ultimar detalles del envío.</p>
             </div>
