agregado de imagenes a las categorias y estilos

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="col-12 col-sm-4">
         <a href="#">
           <div class="card category__muebles category__muebles--style mt-4">
-            <img src="images/categoyImage.png" alt="">
+            <img src="images/categorias_muebles.JPG" alt="Imagen de la categoría Muebles" class="category__image rounded">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h5 class="card-title cardTitle__muebles fs-1">MUEBLES</h5>
             </div>
@@ -201,7 +201,7 @@
       <div class="col-12 col-sm-4">
         <a href="#">
           <div class="card category__textiles category__textiles--style mt-4">
-            <img src="images/categoyImage.png" alt="">
+            <img src="images/categorias_textiles.JPG" alt="Imagen de la categoría Textiles" class="category__image rounded">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h5 class="card-title cardTitle__textiles fs-1">TEXTILES</h5>
             </div>
@@ -211,7 +211,7 @@
       <div class="col-12 col-sm-4">
         <a href="#">
           <div class="card category__decoracion category__decoracion--style mt-4">
-            <img src="images/categoyImage.png" alt="">
+            <img src="images/categorias_decoracion.JPG" alt="Imagen de la categoría Decoracíon" class="category__image rounded">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h5 class="card-title cardTitle__decoracion fs-1">DECORACIÓN</h5>
             </div>
