Arreglo de Nombres de productos, creacion de footer_mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <!-- SEARCHBAR -->
           <div class="searchbar d-none d-lg-block me-3">
-              <input class="search_input" type="text" name="" placeholder="Buscar">
+              <input class="search_input" type="text" placeholder="Buscar">
               <a href="#" class="search_icon">
                   <img src="images/search.svg" alt="Search Icon">
               </a>
@@ -62,30 +62,30 @@
             <!-- SLIDER IMAGES/CAPTIONS -->
             <img src="images/slider_one.JPG" class="carousel__image d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="carousel-caption__text">DECORÁ TU HOGAR CON NUESTRA LÍNEA DE ALMOHADONES</h5>
+              <h5 class="carousel-caption__text">Todo en almohadones para tu sillon</h5>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/slider_two.JPG" class="carousel__image d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="carousel-caption__text">LINEA EXTERIOR</h5>
+              <h5 class="carousel-caption__text">Encontrá lo mejor en muebles para el exterior</h5>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/slider_three.JPG" class="carousel__image d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="carousel-caption__text">SAHUMERIOS</h5>
+              <h5 class="carousel-caption__text">Los mejores sahumerios para aromatizar tu hogar</h5>
             </div>
           </div>
         </div>
           <!-- SLIDER CONTROL -->
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+              <span class="visually-hidden">Anterior</span>
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden">Siguiente</span>
           </button>
       </div>
   </div>
@@ -98,7 +98,7 @@
       <div class="buyingInformation__shipping buyingInformation__shipping--style col-sm-4 col-12 text-center mb-4">
         <img src="images/truckIcon.png" class="d-inline-block align-top img-fluid" alt="Icono de Camion de Envios">
         <div class="buyingInformation__text d-inline-block w-50 ps-1">
-          <h2 class="buyingInformation__title buyingInformation__title--style ">ENVIAMOS TU COMPRA</h2>
+          <h2 class="buyingInformation__title buyingInformation__title--style">ENVIAMOS TU COMPRA</h2>
           <small class="buyingInformation__subtitle buyingInformation__subtitle--style">Entregas a todo el país</small>
         </div>
       </div>
@@ -106,7 +106,7 @@
       <div class="buyingInformation__payment buyingInformation__payment--style col-sm-4 col-12 text-center mb-4">
         <img src="images/cardIcon.png" class="d-inline-block align-top img-fluid" alt="Icono de Tarjeta de Credito">
         <div class="buyingInformation__text d-inline-block w-50 ps-1">
-          <h2 class="buyingInformation__title buyingInformation__title--style ">PAGÁ COMO QUIERAS</h2>
+          <h2 class="buyingInformation__title buyingInformation__title--style">PAGÁ COMO QUIERAS</h2>
           <small class="buyingInformation__subtitle buyingInformation__subtitle--style">Tarjetas de crédito o efectivo</small>
         </div>
       </div>
@@ -114,7 +114,7 @@
       <div class="buyingInformation__safety buyingInformation__safety--style col-sm-4 col-12 text-center mb-4">
         <img src="images/lockIcon.png" class="d-inline-block align-top img-fluid" alt="Icono de Cerradura">
         <div class="buyingInformation__text d-inline-block w-50 ps-1">
-          <h2 class="buyingInformation__title buyingInformation__title--style ">COMPRÁ CON SEGURIDAD</h2>
+          <h2 class="buyingInformation__title buyingInformation__title--style">COMPRÁ CON SEGURIDAD</h2>
           <small class="buyingInformation__subtitle buyingInformation__subtitle--style">Tus datos siempre protegidos</small>
         </div>
       </div>
@@ -133,52 +133,52 @@
         <p class="featuredProducts__subtitle featuredProducts__subtitle--style text-center">Todo lo que soñás para tu casa</p>
       </div>
       <!-- PRODUCTS -->
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productOne" href="pages/productOne.html">
-          <img src="images/servilletero.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">SERVILLETERO - $500</p>
+          <img src="images/servilletero.JPG" class="w-75 rounded" alt="Imagen del Servilletero">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Servilletero - $500</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productTwo" href="#">
-          <img src="images/platos_y_utensillos.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">KIT DE MESA - $10000</p>
+          <img src="images/platos_y_utensillos.JPG" class="w-75 rounded" alt="Imagen Kit de Cubiertos y Platos Lola">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Kit de Cubiertos y Platos - $10000</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productThree" href="#">
-          <img src="images/mate.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">MATE - $800</p>
+          <img src="images/mate.JPG" class="w-75 rounded" alt="Imagen Mate">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Mate - $800</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productFour" href="#">
-          <img src="images/para_puerta.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">PARA PUERTA - $600</p>
+          <img src="images/para_puerta.JPG" class="w-75 rounded" alt="Imagen DoorStoper">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Door Stoper - $600</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productFive" href="#">
-          <img src="images/almohadon_blanco.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">ALMOHADON BLANCO - $750</p>
+          <img src="images/almohadon_blanco.JPG" class="w-75 rounded" alt="Imagen Almohado Luli">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Luli - $750</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productSix" href="#">
-          <img src="images/almohadon_crudo.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">ALMOHADON CRUDO - $1200</p>
+          <img src="images/almohadon_crudo.JPG" class="w-75 rounded" alt="Imagen Almohadon Tuti">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Tuti - $1200</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productSeven" href="#">
-          <img src="images/almohadon_rallado.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">ALMOHADON RALLADO - $550</p>
+          <img src="images/almohadon_rallado.JPG" class="w-75 rounded" alt="Imagen Almohadon Paris">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Paris - $550</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 d-flex justify-content-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center">
         <a class="text-decoration-none featuredProducts__productEight" href="#">
-          <img src="images/hamaca.JPG" class="img-fluid rounded" alt="">
-          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">HAMACA - $10000</p>
+          <img src="images/hamaca.JPG" class="w-75 rounded" alt="Imagen Hamaca">
+          <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Hamaca - $10000</p>
         </a>
       </div>          
     </div>
@@ -186,7 +186,7 @@
   <!-- FEATURED PRODUCTS ENDS -->
 
   <!-- CATEGORIES START -->
-  <div class="categories container pt-4 pb-4 d-flex flex-column align-items-center">
+  <div class="categories container-fluid pt-4 pb-4 d-flex flex-column align-items-center">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-sm-4">
         <a href="#">
@@ -222,7 +222,7 @@
   </div>
   <!-- CATEGORIES ENDS -->
 
-  <!-- FOOTER START -->
+  <!-- FOOTER DESKTOP START -->
   <footer class="footer container-fluid mt-4 d-none d-sm-block">
     <div class="row d-flex">
       <div class="footer__brand col-6 col-sm-2 align-self-center">
@@ -250,7 +250,39 @@
       </div>
     </div>
   </footer>
-  <!-- FOOTER ENDS -->
+  <!-- FOOTER DESKTOP ENDS -->
+
+  <!-- FOOTER MOBILE START -->
+  <footer class="footer d-block d-sm-none container-fluid mt-4">
+    <div class="row">
+      <div class="col-6 pt-2">
+        <div class="footer__brand col-6 col-sm-2 align-self-center">
+          <img src="images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+        </div>
+        <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
+          <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
+            <img src="images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
+          </a>
+          <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
+            <img src="images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
+          </a>
+        </div>
+        <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
+          <p>Sarmiento 37</p>
+          <p>Puerto de Frutos, Tigre</p>
+          <p>+52 9 11 2780-2449</p>
+          <p>Ventasweb@latiendadelola.com</p>
+        </div>
+      </div>
+      <div class="col-6 pt-2">
+        <div class="footer__map col-6 col-sm-4 align-self-center">
+          <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
+        </div>
+      </div>
+    </div>
+    
+  </footer>
 
   
 
