--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
           <div class="carousel-item active">
             <!-- SLIDER IMAGES/CAPTIONS -->
             <img src="images/slider_one.JPG" class="carousel__image d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-block">
               <h5 class="carousel-caption__text">Todo en almohadones para tu sillon</h5>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/slider_two.JPG" class="carousel__image d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-block">
               <h5 class="carousel-caption__text">Encontrá lo mejor en muebles para el exterior</h5>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/slider_three.JPG" class="carousel__image d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-block">
               <h5 class="carousel-caption__text">Los mejores sahumerios para aromatizar tu hogar</h5>
             </div>
           </div>
