Cargado de productos, e imagenes

--- a/index.html
+++ b/index.html
@@ -134,49 +134,49 @@
       </div>
       <!-- PRODUCTS -->
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productOne" href="pages/productOne.html">
+        <a class="text-decoration-none featuredProducts__productOne" href="pages/servilletero.html">
           <img src="images/servilletero.JPG" class="w-75 rounded" alt="Imagen del Servilletero">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Servilletero - $500</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productTwo" href="#">
+        <a class="text-decoration-none featuredProducts__productTwo" href="pages/kitDeCubiertosyPlatos.html">
           <img src="images/platos_y_utensillos.JPG" class="w-75 rounded" alt="Imagen Kit de Cubiertos y Platos Lola">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Kit de Cubiertos y Platos - $10000</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productThree" href="#">
+        <a class="text-decoration-none featuredProducts__productThree" href="pages/mate.html">
           <img src="images/mate.JPG" class="w-75 rounded" alt="Imagen Mate">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Mate - $800</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productFour" href="#">
+        <a class="text-decoration-none featuredProducts__productFour" href="pages/doorStoper.html">
           <img src="images/para_puerta.JPG" class="w-75 rounded" alt="Imagen DoorStoper">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Door Stoper - $600</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productFive" href="#">
+        <a class="text-decoration-none featuredProducts__productFive" href="pages/almohadonLuli.html">
           <img src="images/almohadon_blanco.JPG" class="w-75 rounded" alt="Imagen Almohado Luli">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Luli - $750</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productSix" href="#">
+        <a class="text-decoration-none featuredProducts__productSix" href="pages/almohadonTuti.html">
           <img src="images/almohadon_crudo.JPG" class="w-75 rounded" alt="Imagen Almohadon Tuti">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Tuti - $1200</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productSeven" href="#">
+        <a class="text-decoration-none featuredProducts__productSeven" href="pages/almohadonParis.html">
           <img src="images/almohadon_rallado.JPG" class="w-75 rounded" alt="Imagen Almohadon Paris">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Paris - $550</p>
         </a>
       </div>
       <div class="featuredProducts__product col-6 col-sm-3 text-center">
-        <a class="text-decoration-none featuredProducts__productEight" href="#">
+        <a class="text-decoration-none featuredProducts__productEight" href="pages/hamaca.html">
           <img src="images/hamaca.JPG" class="w-75 rounded" alt="Imagen Hamaca">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Hamaca - $10000</p>
         </a>
