--- a/pages/mate.html
+++ b/pages/mate.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online - La Tienda de Lola</title>
+    <title>Producto Uno - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css">
-    <meta name="description" content="La tienda Online de La Tienda de Lola te permite comprar todos los productos desde la comodidad de tu hogar">
+    <meta name="description" content="Producto Uno de muestra para La Tienda de Lola">
     <meta name="keywords" content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR">
 </head>
 <body>
@@ -48,87 +48,24 @@
     </nav>
     <!-- NAVBAR ENDS -->
 
-    <!-- ONLINE SHOP -->
-    <div class="container-fluid onlineShop">
-        <div class="row">
-            <div class="col-12">
-                <!-- ONLINE SHOP HEADER -->
-                <h1 class="onlineShop__title text-center pt-4">TIENDA ONLINE</h1>
+    <!-- PRODUCT ONE -->
+    <div class="container">
+        <div class="row pt-5 pb-5">
+            <div class="col-12 col-sm-6 pe-4 productOne">
+                <img src="../images/mate.JPG" class="img-fluid float-end productOne__image" alt="Imagen Mate">
             </div>
-        </div>
-        <div class="row pt-4">
-            <div class="col-6 col-sm-3 text-center pt-2 pb-4 onlineShop__productOne">
-                <!-- PRODUCT ONE -->
-                <a href="servilletero.html" class="text-decoration-none">
-                    <img src="../images/servilletero.JPG" class="w-75" alt="Imagen de Servilletero">
-                    <h2 class="pt-2 onlineShop__productTitle">SERVILLETERO - $500</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productTwo">
-                <!-- PRODUCT TWO -->
-                <a href="kitDeCubiertosyPlatos.html" class="text-decoration-none">
-                    <img src="../images/platos_y_utensillos.JPG" class="w-75" alt="Imagen de Kit de Cubiertos y Platos">
-                    <h2 class="pt-2 onlineShop__productTitle">KIT DE CUBIERTOS Y PLATOS - $10000</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productThree">
-                <!-- PRODUCT THREE -->
-                <a href="mate.html" class="text-decoration-none">
-                    <img src="../images/mate.JPG" class="w-75" alt="Imagen de Mate">
-                    <h2 class="pt-2 onlineShop__productTitle">MATE - $800</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productFour">
-                <!-- PRODUCT FOUR -->
-                <a href="doorStoper.html" class="text-decoration-none">
-                    <img src="../images/para_puerta.JPG" class="w-75" alt="Imagen Door Stoper">
-                    <h2 class="pt-2 onlineShop__productTitle">DOOR STOPER - $600</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productFive">
-                <!-- PRODUCT FIVE -->
-                <a href="almohadonLuli.html" class="text-decoration-none">
-                    <img src="../images/almohadon_blanco.JPG" class="w-75" alt="Imagen Almohadon Luli">
-                    <h2 class="pt-2 onlineShop__productTitle">ALMOHADON LULI - $750</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productSix">
-                <!-- PRODUCT SIX -->
-                <a href="almohadonTuti.html" class="text-decoration-none">
-                    <img src="../images/almohadon_crudo.JPG" class="w-75" alt="Imagen Almohadon Tuti">
-                    <h2 class="pt-2 onlineShop__productTitle">ALMOHADON TUTI - $1200</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productSeven">
-                <!-- PRODUCT SEVEN -->
-                <a href="almohadonParis.html" class="text-decoration-none">
-                    <img src="../images/almohadon_rallado.JPG" class="w-75" alt="Imagen Almohadon Paris">
-                    <h2 class="pt-2 onlineShop__productTitle">ALMOHADON PARIS - $550</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productEight">
-                <!-- PRODUCT EIGHT -->
-                <a href="hamaca.html" class="text-decoration-none">
-                    <img src="../images/hamaca.JPG" class="w-75" alt="Imagen Hamaca">
-                    <h2 class="pt-2 onlineShop__productTitle">HAMACA - $10000</h2>
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <!-- ONLINE SHOP PAGE SELECTOR -->
-                <ul class="d-flex list-unstyled justify-content-center pt-4 pb-2 onlineShop__pageSelector">
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">&#8592</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">1</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">2</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">3</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">4</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">&#8594</a></li>
+            <div class="col-12 col-sm-6">
+                <h2 class="productOne__title">MATE</h2>
+                <h3 class="productOne__price">$800</h3>
+                <ul class="list-unstyled productOne__features">
+                    <li>Mate de calabaza</li>
+                    <li>Diseño Vintage</li>
+                    <li>Bombilla incluida</li>
                 </ul>
+                <a class="mt-4 productOne__buyButton" href="#">COMPRAR</a>
             </div>
         </div>
     </div>
-    <!-- ONLINE SHOP END -->
 
   <!-- FOOTER DESKTOP START -->
   <footer class="footer container-fluid mt-4 d-none d-sm-block">
@@ -192,7 +129,7 @@
   </footer>
   <!-- FOOTER MOBILE END -->
 
-  <!-- BOOTSTRAP SCRIPT -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP SCRIPT -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 </body>
 </html>
