Arreglo de Sobre Nosotros

--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -58,6 +58,17 @@
                     <p>La tienda de Lola es creada por Guadalupe en un 14 de diciembre del 2014 como una forma de expresar su estilo y su pasión por la decoración, el local se encuentra en el corazón del puerto de frutos donde se diseñan, restauran y crean muebles y objetos de decoración para el hogar.</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="aboutUs__title text-center mt-4">
+                        APARICIONES EN REVISTAS
+                    </h2>
+                    <!-- CARAS -->
+                    <iframe src="https://caras.perfil.com/noticias/caras-like/la-tienda-de-lola-decoracion-diseno-y-tendencia.phtml" style="border:0px #ffffff none;" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" height="500px" width="100%" allowfullscreen class="pt-4"></iframe>
+                    <!-- LA NACION -->
+                    <iframe src="https://www.lanacion.com.ar/revista-living/buen-clima-exitosa-union-de-tonos-oscuros-y-estilo-rustico-sin-resignar-calidez-nid11042021/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="0" marginheight="0px" marginwidth="0px" height="500px" width="100%" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
 
     <!-- FOOTER START -->
