--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -80,8 +80,8 @@
     </div>
     <!-- HOW TO BUY SECTION END -->
 
-    <!-- FOOTER START -->
-    <footer class="footer container-fluid mt-4">
+    <!-- FOOTER DESKTOP START -->
+    <footer class="footer container-fluid mt-4 d-none d-sm-block">
         <div class="row d-flex">
         <div class="footer__brand col-6 col-sm-2 align-self-center">
             <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
@@ -108,7 +108,39 @@
         </div>
         </div>
     </footer>
-    <!-- FOOTER ENDS -->
+    <!-- FOOTER DESKTOP ENDS -->
+
+    <!-- FOOTER MOBILE START -->
+    <footer class="footer d-block d-sm-none container-fluid mt-4">
+        <div class="row">
+        <div class="col-6 pt-2">
+            <div class="footer__brand col-6 col-sm-2 align-self-center">
+            <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+            </div>
+            <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
+            <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
+                <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
+            </a>
+            <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
+                <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
+            </a>
+            </div>
+            <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
+            <p>Sarmiento 37</p>
+            <p>Puerto de Frutos, Tigre</p>
+            <p>+52 9 11 2780-2449</p>
+            <p>Ventasweb@latiendadelola.com</p>
+            </div>
+        </div>
+        <div class="col-6 pt-2">
+            <div class="footer__map col-6 col-sm-4 align-self-center">
+            <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
+            </div>
+        </div>
+        </div>    
+    </footer>
+    <!-- FOOTER MOBILE END -->
 
     <!-- BOOTSTRAP SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
