Agregado de Links a botones de Footer

--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -75,7 +75,9 @@
     <footer class="footer container-fluid mt-4 d-none d-sm-block">
         <div class="row d-flex">
         <div class="footer__brand col-6 col-sm-2 align-self-center">
-            <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+            <a href="../index.html">
+                <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+            </a>
         </div>
         <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start">
             <p>Sarmiento 37</p>
@@ -106,7 +108,9 @@
         <div class="row">
         <div class="col-6 pt-2">
             <div class="footer__brand col-6 col-sm-2 align-self-center">
-            <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+                <a href="../index.html">
+                    <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+                </a>
             </div>
             <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
             <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
